--- a/aiot_final.ipynb
+++ b/aiot_final.ipynb
@@ -84,12 +84,12 @@
     {
       "cell_type": "code",
       "source": [
-        "mqtt_server = \"MQTT Server\"\n",
-        "mqtt_topics = \"MQTT Topics\"\n",
+        "mqtt_server = \"120.108.111.227\"\n",
+        "mqtt_topics = \"chat123\"\n",
         "data_file = \"./data.csv\"\n",
         "\n",
-        "file = open(data_file, \"wt+\", encoding=\"utf-8-sig\")\n",
-        "print(\"Soil Humid,DHT Humid,Temperature\", file=file)\n",
+        "with open(data_file, \"wt+\", encoding=\"utf-8-sig\") as file:\n",
+        "    print(\"Soil Humid,DHT Humid,Temperature\", file=file)\n",
         "\n",
         "# The callback for when the client receives a CONNACK response from the server.\n",
         "def on_connect(client, userdata, flags, rc):\n",
@@ -101,10 +101,12 @@
         "\n",
         "# The callback for when a PUBLISH message is received from the server.\n",
         "def on_message(client, userdata, msg):\n",
-        "    soil_humid = re.findall(r\"Soil Humid: \\d+\", msg)[0][12:]\n",
-        "    dht_humid = re.findall(r\"DHT Humid: \\d+\\.\\d+\", msg)[0][11:]\n",
-        "    temp = re.findall(r\"Temp: \\d+\\.\\d+\", msg)[0][6:]\n",
-        "    print(\"{},{},{}\".format(soil_humid, dht_humid, temp), file=file)\n",
+        "    message = str(msg.payload)\n",
+        "    soil_humid = re.findall(r\"Soil Humid: \\d+\", message)[0][12:]\n",
+        "    dht_humid = re.findall(r\"DHT Humid: \\d+\\.\\d+\", message)[0][11:]\n",
+        "    temp = re.findall(r\"Temp: \\d+\\.\\d+\", message)[0][6:]\n",
+        "    with open(data_file, \"at+\", encoding=\"utf-8-sig\") as file:\n",
+        "      print(\"{},{},{}\".format(soil_humid, dht_humid, temp), file=file)\n",
         "\n",
         "\n",
         "client = mqtt.Client()\n",
@@ -117,14 +119,39 @@
         "# handles reconnecting.\n",
         "# Other loop*() functions are available that give a threaded interface and a\n",
         "# manual interface.\n",
-        "client.loop_forever()\n",
-        "file.close()"
+        "client.loop_forever()"
       ],
       "metadata": {
-        "id": "OpoXQRCyRkjE"
+        "id": "OpoXQRCyRkjE",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 366
+        },
+        "outputId": "6920d7f7-4c1a-4b2f-c2bd-7b01dbbe2faf"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Connected with result code 0\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "KeyboardInterrupt",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-29-7664546f4ba5>\u001b[0m in \u001b[0;36m<cell line: 36>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[0;31m# Other loop*() functions are available that give a threaded interface and a\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m \u001b[0;31m# manual interface.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 36\u001b[0;31m \u001b[0mclient\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloop_forever\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/paho/mqtt/client.py\u001b[0m in \u001b[0;36mloop_forever\u001b[0;34m(self, timeout, max_packets, retry_first_connection)\u001b[0m\n\u001b[1;32m   1754\u001b[0m             \u001b[0mrc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mMQTT_ERR_SUCCESS\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1755\u001b[0m             \u001b[0;32mwhile\u001b[0m \u001b[0mrc\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mMQTT_ERR_SUCCESS\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1756\u001b[0;31m                 \u001b[0mrc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_loop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtimeout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1757\u001b[0m                 \u001b[0;31m# We don't need to worry about locking here, because we've\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1758\u001b[0m                 \u001b[0;31m# either called loop_forever() when in single threaded mode, or\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/paho/mqtt/client.py\u001b[0m in \u001b[0;36m_loop\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m   1148\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1149\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1150\u001b[0;31m             \u001b[0msocklist\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mselect\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mselect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrlist\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwlist\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtimeout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1151\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1152\u001b[0m             \u001b[0;31m# Socket isn't correct type, in likelihood connection is lost\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -153,7 +180,7 @@
       "metadata": {
         "id": "OwrMOJyoTJC0"
       },
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": []
     }
   ]
